# VHH-Screener

./: .gitignore  .mcp.json  CLAUDE.md  HANDOFF.md  README.md  SCRATCHPAD.md  VHH-falsifier_notes.pages  agent_loop.py  benchmark.py  biologics_server.py  pyproject.toml
notebooks/: validation.ipynb
tests/: conftest.py  test_biologics_server.py  test_immunogenicity.py  test_sasa_filter.py
tools/: ablang2_immunogenicity.py  antifold_inverse_fold.py  boltz2_structure.py
