[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vhh-screener"
version = "0.1.0"
description = "Agentic developability screening for VHH nanobody engineering"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "biopython>=1.83",
    "boltz>=2.2.0",
    "fastmcp>=0.1.0",
    "freesasa>=2.2",
    "openai>=1.0.0",
    "matplotlib>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4.0",
    "mypy>=1.10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
